test/bad/type_missmatch_14.mpp
print 1.0 + ceil(1.0);
